@@ -52,7 +52,7 @@ public class EveningActivityControlSystem {
 	 * @param eveningMovement activity movement
 	 */
 	public void addEveningActivityNode(EveningActivityMovement eveningMovement) {
-		eveningActivityNodes.put(new Integer(eveningMovement.getID()),
+		eveningActivityNodes.put(Integer.valueOf(eveningMovement.getID()),
 				eveningMovement);
 	}
 
@@ -73,7 +73,7 @@ public class EveningActivityControlSystem {
 	 */
 	public EveningTrip getEveningInstructions(int eveningActivityNodeID) {
 		EveningActivityMovement eveningMovement = eveningActivityNodes.get(
-				new Integer(eveningActivityNodeID));
+				Integer.valueOf(eveningActivityNodeID));
 		if (eveningMovement != null) {
 			int index = eveningActivityNodeID % meetingSpots.size();
 			if (nextTrips[index] == null) {
@@ -127,12 +127,12 @@ public class EveningActivityControlSystem {
 	 */
 	public static EveningActivityControlSystem getEveningActivityControlSystem(
 			int id) {
-		if (controlSystems.containsKey(new Integer(id))) {
-			return controlSystems.get(new Integer(id));
+		if (controlSystems.containsKey(Integer.valueOf(id))) {
+			return controlSystems.get(Integer.valueOf(id));
 		} else {
 			EveningActivityControlSystem scs =
 				new EveningActivityControlSystem(id);
-			controlSystems.put(new Integer(id), scs);
+			controlSystems.put(Integer.valueOf(id), scs);
 			return scs;
 		}
 	}
